--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node-sass": "^4.11.2",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
+    "@types/react-scroll": "^1.8.3",
     "gh-pages": "^3.2.3",
     "i": "^0.3.7",
     "node-sass": "^7.0.1",
@@ -21,6 +22,8 @@
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-scroll": "^1.8.6",
+    "react-tsparticles": "^1.43.1",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
