--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
     "@types/react-scroll": "^1.8.3",
+    "axios": "^0.26.1",
     "gh-pages": "^3.2.3",
     "i": "^0.3.7",
     "node-sass": "^7.0.1",
